
The format is based on [Keep a Changelog](https://keepachangelog.com/pt-BR/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/lang/pt-BR/spec/v2.0.0.html).

## [Unreleased] - 2024-05-12

### Added

- Adicionado notificações para quando alguém compra alguma imagem que você criou.
- Adicionado a informação de quantos Kg você colheu no `/fazendinha plantações`.

## [5.15.3] - 2024-05-08

### Fixed

- Corrigido inconsistência no display dos limites do `/fazendinha silo`.

## [5.15.2] - 2024-05-05

### Fixed

- Corrigido a lógica de ignorar contas deletadas nos tops.

## [5.15.1] - 2024-05-01

### Added

- Adicionado a informação de sua mão atual nas suas cartas do poker. - Sugerido por @bielviana

### Fixed

- Removida a opção de apostar caças no /coinflip.

## [5.15.0] - 2024-04-28

### Added

- **Notificações!** Adicionado o sistema de notificações. As notificações são usadas para avisar atualizações de sua conta. As notificações podem ser lidas com o comando `/notificações`. As notificacões não lidas devem sumir após 30 dias.
- Adicionado notificações para quando um usuário compra um tema seu.
- Adicionado notificações para quando um usuário compra algum anúncio seu na feira.
- Adicionado notificações para quando um usuário vence uma aposta no Jogo do Bicho.
- Peso paras plantações! Agora as plantações da `/fazendinha` usam peso por kilos, ao invés de apenas quantidade de plantas. O peso de uma plantação é semi aleatório, e varia de acordo com a estação em que a semente foi plantada.
- O comando `/cooldowns` informa sobre notificações não lidas.

### Changed

- Atualizado sistema da feira para permitir venda e compra de itens por kilo.

### Fixed

- Corrigido erro do `/poker` dos botões não funcionarem após um usuário não fazer sua jogada.
- Corrigida a mensagem de sucesso para alteração de títulos em inglês.

## [5.14.2] - 2024-04-22

### Added

- Adicionada a badge _Quatro anos com a Menhera_!

## [5.14.1] - 2024-04-21

### Added
