@@ -81,6 +81,57 @@ export const EMOJIS = {
   badge_203: '<:badge_203:1237388179145883731>',
 };
 
+export const SAFE_EMOJIS = {
+  success: '✅',
+  error: '❌',
+  warn: '⚠️',
+  notify: '🔔',
+  sorry: '🥺',
+  wink: '😉',
+  ok: '🫡',
+  loading: '🦥',
+  smile: '😊',
+  devil: '😈',
+  demons: '😈',
+  angels: '👼',
+  demigods: '👾',
+  gods: '🧙‍♂️',
+};
+
+export const TOP_EMOJIS: { [key: string]: string } = {
+  mamou: EMOJIS.crown,
+  mamado: EMOJIS.lick,
+  estrelinhas: EMOJIS.estrelinhas,
+  demons: EMOJIS.demons,
+  giants: EMOJIS.giants,
+  angels: EMOJIS.angels,
+  archangels: EMOJIS.archangels,
+  demigods: EMOJIS.demigods,
+  gods: EMOJIS.gods,
+  votes: EMOJIS.ok,
+  blackjack: '🃏',
+  coinflip: '📀',
+  roulette: '🎡',
+  bicho: '🦌',
+};
+
+export const SAFE_TOP_EMOJIS = {
+  mamou: EMOJIS.crown,
+  mamado: EMOJIS.lick,
+  estrelinhas: EMOJIS.estrelinhas,
+  demons: SAFE_EMOJIS.demons,
+  giants: EMOJIS.giants,
+  angels: SAFE_EMOJIS.angels,
+  archangels: EMOJIS.archangels,
+  demigods: SAFE_EMOJIS.demigods,
+  gods: SAFE_EMOJIS.gods,
+  votes: SAFE_EMOJIS.ok,
+  blackjack: '🃏',
+  coinflip: '📀',
+  roulette: '🎡',
+  bicho: '🦌',
+};
+
 export const COLORS = {
   Default: 0xa788ff,
   HuntDefault: 0xdf93fd,
